package jobOpeningManagement.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import jobOpeningManagement.domain.Application;

public interface ApplicationRepository extends DomainRepository<String, Application>{

}
